--- a/src/main/resources/templates/picture.html
+++ b/src/main/resources/templates/picture.html
@@ -42,11 +42,10 @@
 	</div>
 
 	<!-- 底部 -->
-	<footer th:replace="_fragments :: footer"></footer>
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+	<script src="../static/lib/picture/js/jkresponsivegallery.js" th:src="@{/static/lib/picture/js/jkresponsivegallery.js}"/>
 <!-- 此处Bug还未处理 -->
 <script>
 	$('.menu.toggle').click(function (){
