--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="/admin/_fragments :: head(~{::title})">
+<head th:replace="admin/_fragments :: head(~{::title})">
     <title>博客管理</title>
 </head>
 <body>
