--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="/admin/_fragments :: head(~{::title})">
+<head th:replace="admin/_fragments :: head(~{::title})">
     <title>后台登录</title>
 </head>
 
