--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <!--头部导航-->
-    <nav th:replace="/admin/_fragments :: menu(0)"></nav>
+    <nav th:replace="admin/_fragments :: menu(0)"></nav>
     <br>
     <!--中间内容-->
     <div class="m-container-small m-padded-tb-big">
